opam-version: "1.2"
version: "dev"

maintainer: "jerome.vouillon@pps.univ-paris-diderot.fr"
authors: ["Jerome Vouillon" "Thomas Gazagnaire" "Anil Madhavapeddy"]
license: "LGPL-2.0 with OCaml linking exception"
homepage: "https://github.com/ocaml/ocaml-re"
bug-reports: "https://github.com/ocaml/ocaml-re/issues"
dev-repo: "https://github.com/ocaml/ocaml-re.git"

build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build}
  "base-bytes"
  "ounit" {test}
]
