opam-version: "1.2"

maintainer: "rudi.grinberg@gmail.com"
authors: [
  "Jerome Vouillon"
  "Thomas Gazagnaire"
  "Anil Madhavapeddy"
  "Rudi Grinberg"
  "Gabriel Radanne"
]
license: "LGPL-2.0 with OCaml linking exception"
homepage: "https://github.com/ocaml/ocaml-re"
bug-reports: "https://github.com/ocaml/ocaml-re/issues"
dev-repo: "https://github.com/ocaml/ocaml-re.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]

depends: [
  "dune" {build}
  "ounit" {test}
  "seq"
]

available: [ocaml-version >= "4.02.3"]
