(executables
 (libraries re fort_unit)
 (modules test_re)
 (names test_re))

(executables
 (libraries re fort_unit)
 (modules test_perl)
 (names test_perl))

(executables
 (libraries re fort_unit)
 (modules test_emacs)
 (names test_emacs))

(executables
 (libraries re fort_unit)
 (modules test_glob)
 (names test_glob))

(executables
 (libraries re str fort_unit)
 (modules test_str)
 (names test_str))

(executables
 (libraries re fort_unit)
 (modules test_pcre)
 (names test_pcre))

(alias
 (name   runtest)
 (action (run ./test_re.exe)))

(alias
 (name   runtest)
 (action (run ./test_perl.exe)))

(alias
 (name   runtest)
 (action (run ./test_emacs.exe)))

(alias
 (name   runtest)
 (action (run ./test_glob.exe)))

(alias
 (name   runtest)
 (action (run ./test_str.exe)))

(alias
 (name   runtest)
 (action (run ./test_pcre.exe)))
